--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -14,6 +14,7 @@
 	<fx:Metadata>
 		[Style(name="dragImageAlpha",inherit="true",type="Number")]
 		[Event(name="change",type="flash.events.Event")]
+		[Event(name="propertyEditorItemAdding",type="view.events.PropertyEditorChangeEvent")]
 	</fx:Metadata>
 
 	<fx:Declarations>
