PrimeFaces: Remember selected rows/columns after deselection of Grid in the surface editing (reference prominic/Moonshine-IDE#254)

--- a/src/view/primeFaces/forms/DivLayoutForm.mxml
+++ b/src/view/primeFaces/forms/DivLayoutForm.mxml
@@ -118,6 +118,8 @@
 
         private function selectItems():void
         {
+            if (!this.selectedItem) return;
+
             this.wrapContent.selected = this.selectedItem["wrap"];
             selectCurrentItem(directionDropDownList);
             selectCurrentItem(horizontalDirection);
