--- a/src/view/forms/ToggleButtonSelectedForm.mxml
+++ b/src/view/forms/ToggleButtonSelectedForm.mxml
@@ -109,7 +109,7 @@
             {
                 return;
             }
-            this._binding = BindingUtils.bindProperty(this, "bindableText", this.selectedItem, this._textProperty);
+            this._binding = BindingUtils.bindProperty(this, "bindableText", this.selectedItem, this._textProperty, false, true);
         }
         ]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
