--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -46,14 +46,15 @@
 		import utils.EditingSurfaceReader;
 		import utils.EditingSurfaceWriter;
 		
-		import view.suportClasses.events.PropertyEditorChangeEvent;
+		import view.interfaces.IHistorySurfaceComponent;
 		import view.interfaces.IMainApplication;
 		import view.interfaces.IMultiViewContainer;
 		import view.interfaces.INonDeletableSurfaceComponent;
 		import view.interfaces.ISurfaceComponent;
-		import view.suportClasses.PropertyChangeReference;
 		import view.primeFaces.surfaceComponents.components.Div;
 		import view.primeFaces.surfaceComponents.components.Grid;
+		import view.suportClasses.PropertyChangeReference;
+		import view.suportClasses.events.PropertyEditorChangeEvent;
 		import view.suportClasses.events.SurfaceComponentEvent;
 
 		private static const SMALL_NUDGE:int = 1;
@@ -518,11 +519,14 @@
 				
 				// at this point property editor not created thus we send the 
 				// event through EditingSurface
-				var tmpChangeRef:PropertyChangeReference = new PropertyChangeReference(object);
-				tmpChangeRef.fieldClassIndexToParent = IVisualElementContainer(object.parent).getElementIndex(object as IVisualElement);
-				tmpChangeRef.fieldClassParent = object.parent as IVisualElementContainer;
-				
-				this.dispatchEvent(new PropertyEditorChangeEvent(PropertyEditorChangeEvent.PROPERTY_EDITOR_ITEM_ADDING, tmpChangeRef));
+				if (object is IHistorySurfaceComponent)
+				{
+					var tmpChangeRef:PropertyChangeReference = new PropertyChangeReference(object as IHistorySurfaceComponent);
+					tmpChangeRef.fieldClassIndexToParent = IVisualElementContainer(object.parent).getElementIndex(object as IVisualElement);
+					tmpChangeRef.fieldClassParent = object.parent as IVisualElementContainer;
+					
+					this.dispatchEvent(new PropertyEditorChangeEvent(PropertyEditorChangeEvent.PROPERTY_EDITOR_ITEM_ADDING, tmpChangeRef));
+				}
 			}
 			this.selectedItem = object;
 			this.setFocus();
