--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -26,7 +26,7 @@
 		[Bindable]
 		private var columnsDataProvider:ArrayList;
 
-		private var itemAdded:Boolean;
+		private var selectedCellDirty:Boolean;
 
 		private var _selectedCell:Div;
 
@@ -50,9 +50,20 @@
 			return selectedItem as Grid;
 		}
 
+		override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void
+		{
+			super.updateDisplayList(unscaledWidth, unscaledHeight);
+
+			if (this.selectedCellDirty)
+			{
+				this.selectedCell = this.getSelectedCell();
+				this.selectedCellDirty = false;
+			}
+		}
+
 		private function addRowButton_clickHandler(event:MouseEvent):void
 		{
-            var itemValue:int = this.rowsDataProvider.length + 1;
+			var itemValue:int = this.rowsDataProvider.length + 1;
 			var rowItem:GridListItem = new GridListItem("R" + String(itemValue), itemValue);
 			var columnItem:GridListItem = new GridListItem("C1", 1);
 
@@ -62,11 +73,13 @@
 
 			var grid:Grid = (selectedItem as Grid);
 			grid.addRow();
-			this.selectedCell = this.getSelectedCell();
+
+			this.selectedCellDirty = true;
+			this.invalidateDisplayList();
 		}
 
-        private function addColumnButton_clickHandler(event:MouseEvent):void
-        {
+		private function addColumnButton_clickHandler(event:MouseEvent):void
+		{
 			var rowItem:GridListItem = dgRows.selectedItem as GridListItem;
 			var colItemValue:int = rowItem.columns.length + 1;
 			var colItem:GridListItem = new GridListItem("C" + colItemValue, colItemValue);
@@ -75,45 +88,36 @@
 			this.columnsDataProvider = rowItem.columns;
 
 			selectedGrid.addColumn(dgRows.selectedIndex);
-        }
+		}
 
 		private function deleteItemButton_clickHandler(event:MouseEvent):void
 		{
 			if (this.rowsDataProvider.length > 1)
 			{
+				this.rowsDataProvider.removeItemAt(selectedGrid.selectedRow);
 				var grid:Grid = (selectedItem as Grid);
 				grid.removeRow(selectedGrid.selectedRow);
 
-				this.rowsDataProvider.removeItemAt(selectedGrid.selectedRow);
-				this.columnsDataProvider = this.rowsDataProvider.getItemAt(dgRows.selectedIndex).columns;
+				this.columnsDataProvider = this.rowsDataProvider.getItemAt(selectedGrid.selectedRow).columns;
 
-				this.selectedCell = this.getSelectedCell();
+				this.selectedCellDirty = true;
+				this.invalidateDisplayList();
 			}
 		}
 
-        private function deleteColumnButton_clickHandler(event:MouseEvent):void
-        {
+		private function deleteColumnButton_clickHandler(event:MouseEvent):void
+		{
+			var rowItem:GridListItem = dgRows.selectedItem as GridListItem;
+			rowItem.columns.removeItemAt(selectedGrid.selectedColumn);
+			
 			var grid:Grid = (selectedItem as Grid);
 			grid.removeColumn(selectedGrid.selectedRow, selectedGrid.selectedColumn);
 
-			var rowItem:GridListItem = dgRows.selectedItem as GridListItem;
-			rowItem.columns.removeItemAt(selectedGrid.selectedColumn);
-
-			this.selectedCell = this.getSelectedCell();
-        }
-
-		override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void
-		{
-			super.updateDisplayList(unscaledWidth, unscaledHeight);
-
-			if (itemAdded)
-			{
-				dgRows.setSelectedIndex(dgRows.dataProvider.length - 1);
-				this.itemAdded = false;
-			}
+			this.selectedCellDirty = true;
+			this.invalidateDisplayList();
 		}
 
-        private function onGridFormCreationComplete(event:FlexEvent):void
+		private function onGridFormCreationComplete(event:FlexEvent):void
 		{
 			dgRows.columnHeaderGroup.visible = dgRows.columnHeaderGroup.includeInLayout = false;
 
@@ -122,7 +126,7 @@
 
 			for (var row:int = 0; row < gridNumElements; row++)
 			{
-                var itemValue:int = row + 1;
+				var itemValue:int = row + 1;
 				var rowItem:GridListItem = new GridListItem("R" + itemValue, itemValue);
 				var gridItem:GridRow = grid.getElementAt(row) as GridRow;
 				for (var col:int = 0; col < gridItem.numElements; col++)
@@ -133,13 +137,10 @@
 				this.rowsDataProvider.addItem(rowItem);
 			}
 
-			this.columnsDataProvider = this.rowsDataProvider.getItemAt(0).columns;
-
-
-			this.dgRows.selectedIndex = this.selectedGrid.oldSelectedRow;
-			this.columnList.selectedIndex = this.selectedGrid.oldSelectedColumn;
+			this.columnsDataProvider = this.rowsDataProvider.getItemAt(this.selectedGrid.selectedRow).columns;
 
 			this.selectedCell = this.getSelectedCell();
+			dispatchEvent(new Event(Event.CHANGE));
 		}
 
 		protected function onGridSelectionChanged(event:GridSelectionEvent):void
@@ -147,11 +148,18 @@
 			var gridListItem:GridListItem = dgRows.selectedItem as GridListItem;
 			this.columnsDataProvider = gridListItem.columns;
 
-			this.selectedCell = this.getSelectedCell();
+			this.selectedGrid.selectedRow = dgRows.selectedIndex;
+			this.selectedGrid.selectedColumn = 0;
+
+			this.selectedCellDirty = true;
+			this.invalidateDisplayList();
 		}
 
 		private function onColumnListChange(event:IndexChangeEvent):void
 		{
+			this.selectedGrid.selectedRow = dgRows.selectedIndex;
+			this.selectedGrid.selectedColumn = columnList.selectedIndex;
+
 			this.selectedCell = this.getSelectedCell();
 		}
 
@@ -164,7 +172,6 @@
 
 			return gridItem.getElementAt(0) as Div;
 		}
-
 		]]>
 	</fx:Script>
     <suportclasses:layout>
@@ -176,7 +183,7 @@
 					width="100%" maxHeight="350"
 					sortableColumns="false" draggableColumns="false"
 					selectionChange="onGridSelectionChanged(event)" requireSelection="true"
-		 			dataProvider="{rowsDataProvider}" selectedIndex="@{selectedGrid.selectedRow}">
+		 			dataProvider="{rowsDataProvider}" selectedIndex="{selectedGrid.selectedRow}">
 			<s:columns>
 				<s:ArrayList>
 					<s:GridColumn dataField="label" headerText="Row number"/>
@@ -194,7 +201,7 @@
 	<s:FormItem label="Columns" skinClass="skins.StackedFormItemSkin">
 		<s:List id="columnList" width="100%" height="30" labelField="label"
 				dataProvider="{columnsDataProvider}" requireSelection="true"
-				change="onColumnListChange(event)" selectedIndex="@{selectedGrid.selectedColumn}">
+				change="onColumnListChange(event)" selectedIndex="{selectedGrid.selectedColumn}">
 			<s:layout>
 				<s:HorizontalLayout gap="2" horizontalAlign="left" verticalAlign="middle"/>
 			</s:layout>
