- SET/GET values now handles by PropertyChangeReference.as, removed extra interface class - PrimeFaces Button added to history (reference prominic/Moonshine-IDE#247)

--- a/src/view/primeFaces/propertyEditors/ButtonPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/ButtonPropertyEditor.mxml
@@ -13,5 +13,5 @@
 	<s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
 	<forms:TextForm label="Value" textProperty="label"/>
 	<forms:TextForm label="Title" textProperty="toolTip"/>
-	<primeFaces:DisabledForm label="Disabled"/>
+	<forms:ToggleButtonSelectedForm label="Enabled" textProperty="enabled"/>
 </suportclasses:BasePropertyEditor>
