--- a/src/view/primeFaces/forms/MaskedTextInputForm.mxml
+++ b/src/view/primeFaces/forms/MaskedTextInputForm.mxml
@@ -2,23 +2,23 @@
 <suportclasses:BasePropertyEditorForm xmlns:fx="http://ns.adobe.com/mxml/2009"
                                       xmlns:suportclasses="view.suportClasses.*"
                                       xmlns:s="library://ns.adobe.com/flex/spark" xmlns:components="components.*"
-                                      skinClass="skins.FormSkin" creationComplete="onMaskedTextInputFormCreationComplete(event)">
+                                      skinClass="skins.FormSkin" creationComplete="onMaskedTextInputFormCreationComplete(event)" xmlns:components1="view.primeFaces.surfaceComponents.components.*">
     <suportclasses:layout>
         <s:FormLayout />
     </suportclasses:layout>
 
     <s:FormHeading skinClass="skins.FormHeadingSkin" height="0"/>
     <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
-        <components:MaskedTextInput id="textInput" showMaskWhileWrite="false"
+        <components1:InputMask id="textInput" showMaskWhileWrite="false"
                                     text="{bindableText}" maskText="{bindableMaskText}" width="100%" minWidth="156"
-                                    change="textInput_changeHandler(event)" skinClass="skins.TextInputSkin"/>
+                                    enter="textInput_changeHandler(event)" focusOut="textInput_changeHandler(event)" skinClass="skins.TextInputSkin"/>
     </s:FormItem>
 
     <fx:Script><![CDATA[
         import mx.binding.utils.BindingUtils;
         import mx.binding.utils.ChangeWatcher;
         import mx.events.FlexEvent;
-
+        
         import view.interfaces.ISurfaceComponent;
 
         private var _binding:ChangeWatcher;
@@ -94,6 +94,8 @@
 
         private function textInput_changeHandler(event:Event):void
         {
+			if (!(event.target is InputMask)) return;
+			
             if (!(this.textProperty in this.selectedItem))
             {
                 this.textInput.errorString = "Field " + this._textProperty + " does not exist";
